<resources>
    <string name="app_name">restaurant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Продукты</string>
    <string name="menu_slideshow">Блюда</string>
    <string name="workers">Работники</string>
    <string name="drinks">Напитки</string>
    <string name="clients">Клиенты</string>
    <string name="suppliers">Поставщики</string>
    <string name="restaurants">Рестораны</string>
</resources>