<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_workers"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/workers" />
        <item
            android:id="@+id/nav_drinks"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/drinks" />
        <item
            android:id="@+id/nav_suppliers"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/suppliers" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/clients" />
        <item
            android:id="@+id/nav_restuarants"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/restaurants" />
    </group>
</menu>