<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.restaurant.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.restaurant.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.restaurant.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_workers"
        android:name="com.example.restaurant.ui.workers.WorkersFragment"
        android:label="@string/workers"
        tools:layout="@layout/fragment_workers" />
    <fragment
        android:id="@+id/nav_clients"
        android:name="com.example.restaurant.ui.Clients.Clients"
        android:label="@string/clients"
        tools:layout="@layout/clients_fragment" />
    <fragment
        android:id="@+id/nav_drinks"
        android:name="com.example.restaurant.ui.Drinks.Drinks"
        android:label="@string/drinks"
        tools:layout="@layout/drinks_fragment" />
    <fragment
        android:id="@+id/nav_suppliers"
        android:name="com.example.restaurant.ui.Suppliers.Suppliers"
        android:label="@string/suppliers"
        tools:layout="@layout/suppliers_fragments" />
    <fragment
        android:id="@+id/nav_restuarants"
        android:name="com.example.restaurant.ui.restaurants.Restaurants"
        android:label="@string/restaurants"
        tools:layout="@layout/restaurants_fragment" />
</navigation>